# openglad

./: .gitignore  16water1.pix  AUTHORS  ChangeLog  DINOMAGE_LICENSE.txt  INSTALL  INSTALL-OLD  Makefile  Makefile.am  Makefile.in  Makefile.old  NEWS  Openglad.dev  Openscen.dev  README  README.devel  TODO  aclocal.m4  autogen.sh  base.h  boost.doc  bright.act  button.cpp  button.h  cb_Openglad.cbp  cheats.txt  classes.doc  classes.txt  colors.h  compile-glad  compile-scen  config.h.in  configure  configure.ac  debug.bat  delbig.bat  detect.c  detect.h  dozip.bat  editor.bat  (+125 more)
bak/: bolt1.sou  boom.sou  charge.sou  clang.sou  die1.sou  eat.sou  faerie1.sou  int32.cpp  int32.h  roar.sou  scankeys.h  teleport.sou  video.cpp  yo.sou
builtin/: org.openglad.gladiator.glad
cfg/: openglad.yaml
debian/: README.Debian  changelog  control  copyright  dirs  menu  rules
extra_campaigns/: org.openglad.tryxian.glad
fss/: levels.001  scen10.fss  scen16.fss  scen17.fss  scen20.fss  scen23.fss  scen3.fss  scen30.fss  scen300.fss  scen301.fss  scen302.fss  scen303.fss  scen305.fss  scen37.fss  scen43.fss  scen45.fss  scen81.fss
pix/: 16braz1.pix  16carpll.pix  16carpm2.pix  16carpr.pix  16cliff1.pix  16cliff3.pix  16cliff4.pix  16colm0.pix  16cscap.pix  16csrigh.pix  16csver.pix  16dglld.pix  16dglrd.pix  16dguld.pix  16dirt2.pix  16exit1.pix  16fpl.pix  16fpr.pix  16fpu.pix  16grass4.pix  16grdb2.pix  16grdr2.pix  16grlb.pix  16grllb.pix  16grlr.pix  16grlt.pix  16gwur.pix  16jwg1.pix  16jwg2.pix  16path2.pix  16path3.pix  16path4.pix  16pave2.pix  16pave3.pix  16ptest.pix  16stone1.pix  16stone2.pix  16treeb1.pix  16treeml.pix  16treet1.pix  (+84 more)
scen/: 16brick3.pix  16brickr.pix  16clifdl.pix  16clifdr.pix  16cliff2.pix  16clifup.pix  16csleft.pix  16dgll1.pix  16dgul1.pix  16dgur1.pix  16dgurd.pix  16dirtd1.pix  16floor.pix  16grasd1.pix  16grass1.pix  16grass3.pix  16grassd.pix  16grassr.pix  16grdb1.pix  16grdr1.pix  16grl1.pix  16grlrb.pix  16grlrt.pix  16gwll.pix  16gwlr.pix  16gwul.pix  16path1.pix  16pave1.pix  16pstep.pix  16ptestl.pix  16ptestr.pix  16space.pix  16stone3.pix  16treem1.pix  16treemr.pix  16treemt.pix  16ttop.pix  16wallll.pix  16wgl.pix  16wgll.pix  (+112 more)
scen/david/: scen0103.pix  scen0104.pix  scen0105.pix  scen0106.pix  scen0107.pix  scen0108.pix  scen0109.pix  scen0110.pix  scen0111.pix  scen0112.pix  scen0113.pix  scen0114.pix  scen0115.pix  scen103.fss  scen104.fss  scen105.fss  scen106.fss  scen107.fss  scen108.fss  scen109.fss  scen110.fss  scen111.fss  scen112.fss  scen113.fss  scen114.fss  scen115.fss
scen/denu/: glad.cfg  graphics.001  levels.001  readme.1st  save0.gtl  scen100.fss  scen100.pix  scen102.fss  scen102.pix  scen103.fss  scen103.pix  scen104.fss  scen104.pix  scen105.fss  scen105.pix  scen108.fss  scen108.pix  scen111.fss  scen111.pix  scen112.fss  scen112.pix  scen113.fss  scen113.pix
scen/derek/: scen246.fss  scen247.fss  scen248.fss  scen248.pix  scen249.fss  scen249.pix
scen/x/: 16brick1.pix  16brick2.pix  16brickc.pix  16brickl.pix  16carpb.pix  16carpl.pix  16carplr.pix  16carpm.pix  16carpu.pix  16carpul.pix  16carpur.pix  16clifu2.pix  16cliful.pix  16clifur.pix  16cob1.pix  16cob2.pix  16cob3.pix  16cob4.pix  16colm1.pix  16cscup.pix  16cshor.pix  16cstiny.pix  16dglr1.pix  16fpd.pix  16grass2.pix  16grassh.pix  16grassi.pix  16grd2.pix  16grd3.pix  16grd4.pix  16grdbr.pix  16grll.pix  16grllt.pix  16jwg3.pix  16tile.pix  16torch1.pix  16w2lo.pix  16wall2.pix  16wallod.pix  16wallog.pix  (+59 more)
sound/: Makefile.am
src/: BUGS  Makefile  Makefile.am  Makefile.in  Makefile.old  Makefile.vc  OuyaController.cpp  OuyaController.h  base.h  button.cpp  button.h  campaign_picker.cpp  campaign_picker.h  cb_Openscen.cbp  colors.h  config.h-linux  config.h-win  effect.cpp  effect.h  game.cpp  glad.cpp  gladpack.cpp  gladpack.h  gloader.cpp  gparser.cpp  graph.h  graphlib.cpp  guy.cpp  guy.h  help.cpp  input.cpp  input.h  intro.cpp  io.cpp  io.h  level_data.cpp  level_data.h  level_editor.cpp  level_picker.cpp  level_picker.h  (+58 more)
src/scen/: scen.cpp  scen.h
util/: Makefile.am  cb_colorview.cbp  cb_gladpack.cbp  cb_openscen.cbp  cb_pixconvert.cbp  cb_pixedit.cbp  colorview.cpp  getcolors.c  gladpack.c  pack.c  pixconvert.c  pixconvert.cpp  pixedit.c  pixieread.c  savepng.c  savepng.h  scenver.c
