bin_PROGRAMS = openglad openscen
#EXTRA_PROGRAMS = openscen

openglad_SOURCES = glad.cpp button.cpp effect.cpp game.cpp gladpack.cpp \
graphlib.cpp guy.cpp help.cpp input.cpp intro.cpp living.cpp loader.cpp \
obmap.cpp pal32.cpp parser.cpp picker.cpp pixie.cpp pixien.cpp radar.cpp \
screen.cpp smooth.cpp sound.cpp stats.cpp text.cpp treasure.cpp video.cpp \
view.cpp walker.cpp weap.cpp sai2x.cpp util.cpp\
base.h button.h colors.h effect.h gladpack.h graph.h guy.h input.h living.h \
loader.h obmap.h pal32.h palettes.h parser.h picker.h pixdefs.h pixie.h \
pixien.h radar.h scen.h screen.h smooth.h soundob.h sounds.h stats.h text.h \
treasure.h video.h view.h walker.h weap.h sai2x.h util.h

openscen_SOURCES = scen.cpp effect.cpp game.cpp gladpack.cpp \
graphlib.cpp guy.cpp help.cpp input.cpp intro.cpp living.cpp loader.cpp \
obmap.cpp pal32.cpp parser.cpp pixie.cpp pixien.cpp radar.cpp \
screen.cpp smooth.cpp sound.cpp stats.cpp text.cpp treasure.cpp video.cpp \
view.cpp walker.cpp weap.cpp sai2x.cpp util.cpp\
base.h colors.h effect.h gladpack.h graph.h guy.h input.h living.h \
loader.h obmap.h pal32.h palettes.h parser.h pixdefs.h pixie.h \
pixien.h radar.h scen.h screen.h smooth.h soundob.h sounds.h stats.h text.h \
treasure.h video.h view.h walker.h weap.h sai2x.h util.h
openscen_CXXFLAGS = -DOPENSCEN
